inserted swagger docstrings
